examples/type_system/failing/189_contextual_boundary_unresolved_strict_e425.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E425: strict mode rejects unresolved generic runtime boundary checks on module-qualified calls.

import TypeSystem.HmGenericModule

fn main() -> Unit {
    TypeSystem.HmGenericModule.id(1)
    None
}
